updated github portfolio icons to link to corresponding github repo page

--- a/index.html
+++ b/index.html
@@ -280,14 +280,18 @@
                         <div class="portfolio-box-01">
                             <div class="portfolio-img">
                                 <img src="static/img/portfolio/Tetris.png" title="" alt="">
+
                             </div>
                             <div class="portfolio-info">
                                 <h5>Tetris</h5>
                                 <span>Full Tetris game using Node.JS and PostgresSQL with multiplayer functionality,
-                                    leaderboard and chatroom using sockets.io</span>
-                                <a class="link-overlay" href="https://github.com/rdargali/tetris"></a>
-                                <a class="gallery-link" href="static/img/portfolio-1.jpg"><i class="ti-plus"></i></a>
+                                    leaderboard and chatroom using sockets.io </span>
+
+                                <a class="link-overlay" href="https://powerful-ravine-73143.herokuapp.com/"></a>
+                                <a class="gh-link" href="https://github.com/rdargali/tetris"><i
+                                        class="fab fa-github"></i></a>
                             </div>
+
                         </div>
                     </div>
                     <!-- grid item -->
@@ -301,8 +305,9 @@
                                 <span>This application provides users with trivia questions with the users' choice of
                                     category, difficulty, and number of questions. Provides single and multiplayer mode.
                                 </span>
-                                <a class="link-overlay" href="https://github.com/rdargali/TriviaApp"></a>
-                                <a class="gallery-link" href="static/img/portfolio-2.jpg"><i class="ti-plus"></i></a>
+                                <a class="link-overlay" href="https://summerbr.github.io/TriviaApp/"></a>
+                                <a class="gh-link" href="https://github.com/rdargali/TriviaApp"><i
+                                        class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
