updated sizes of education boxes and removed placeholder images

--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
 
 
         <section id="education" class="section dark-section">
+
             <div class="container">
                 <div class="row sm-m-25px-b m-35px-b">
                     <div class="col-md-12 text-center">
@@ -400,7 +401,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 m-15px-tb">
-                        <div class="feature-box-2">
+                        <div class="feature-box-2 education-box">
                             <div class="icon">
                                 <i class="fas fa-user-graduate"></i>
                             </div>
@@ -410,7 +411,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 m-15px-tb">
-                        <div class="feature-box-2">
+                        <div class="feature-box-2 education-box">
                             <div class="icon">
                                 <i class="fas fa-laptop-code"></i>
                             </div>
