--- a/index.html
+++ b/index.html
@@ -403,22 +403,23 @@
                     <div class="col-md-6 m-15px-tb">
                         <div class="feature-box-2 education-box">
                             <div class="icon">
-                                <i class="fas fa-user-graduate"></i>
-                            </div>
-                            <h6>Class of 2015</h6>
-                            <h5>University of Texas at Dallas</h5>
-                            <p>Bachelor of Science in Finance at the Naveen Jindal School of Management</p>
-                        </div>
-                    </div>
-                    <div class="col-md-6 m-15px-tb">
-                        <div class="feature-box-2 education-box">
-                            <div class="icon">
                                 <i class="fas fa-laptop-code"></i>
                             </div>
                             <h6>August 2019 - March 2020</h6>
                             <h5>Digital Crafts</h5>
                             <p>Full stack web development boot camp that included HTML, CSS, JavaScript, Node.js,
                                 PostgresSQL, React, and Redux among other frameworks and libraries. </p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 m-15px-tb">
+                        <div class="feature-box-2 education-box">
+                            <div class="icon">
+                                <i class="fas fa-user-graduate"></i>
+                            </div>
+                            <h6>August 2012 - July 2015</h6>
+                            <h5>University of Texas at Dallas</h5>
+                            <p>Bachelor of Science in Finance at the Naveen Jindal School of Management</p>
                         </div>
                     </div>
 
