Added tweet tweet to portfolio

--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
 
             <div class="container">
                 <div class="portfolio-content lightbox-gallery">
+                    <!-- grid item -->
                     <div class="grid-item product branding">
                         <div class="portfolio-box-01">
                             <div class="portfolio-img">
@@ -314,71 +315,25 @@
 
                     <!-- grid item -->
 
-                    <!-- <div class="grid-item product branding">
-                                <div class="portfolio-box-01">
-                                    <div class="portfolio-img">
-                                        <img src="static/img/portfolio-1.jpg" title="" alt="">
-                                    </div>
-                                    <div class="portfolio-info">
-                                        <h5>Our Photography</h5>
-                                        <span>Design</span>
-                                        <a class="link-overlay" href=""></a>
-                                        <a class="gallery-link" href="static/img/portfolio-1.jpg"><i class="ti-plus"></i></a>
-                                    </div>
-                                </div>
-                            </div>  -->
-
                     <!-- grid item -->
+                    <div class="grid-item product branding">
+                        <div class="portfolio-box-01">
+                            <div class="portfolio-img">
+                                <img src="static/img/portfolio/Tweet.png" title="" alt="">
 
+                            </div>
+                            <div class="portfolio-info">
+                                <h5>Tweet Tweet</h5>
+                                <span>Bare bones Twitter clone with Node.js, Express, Sequelize, and PostGres. </span>
 
-                    <!-- <div class="grid-item product branding">
-                                <div class="portfolio-box-01">
-                                    <div class="portfolio-img">
-                                        <img src="static/img/portfolio-1.jpg" title="" alt="">
-                                    </div>
-                                    <div class="portfolio-info">
-                                        <h5>Our Photography</h5>
-                                        <span>Design</span>
-                                        <a class="link-overlay" href="#"></a>
-                                        <a class="gallery-link" href="static/img/portfolio-1.jpg"><i class="ti-plus"></i></a>
-                                    </div>
-                                </div>
-                            </div>  -->
+                                <a class="link-overlay" href="https://powerful-ravine-73143.herokuapp.com/"></a>
+                                <a class="gh-link" href="https://github.com/rdargali/Tweet-Tweet"><i
+                                        class="fab fa-github"></i></a>
+                            </div>
 
-                    <!-- grid item -->
+                        </div>
+                    </div>
 
-                    <!-- <div class="grid-item product branding">
-                                <div class="portfolio-box-01">
-                                    <div class="portfolio-img">
-                                        <img src="static/img/portfolio-1.jpg" title="" alt="">
-                                    </div>
-                                    <div class="portfolio-info">
-                                        <h5>Our Photography</h5>
-                                        <span>Design</span>
-                                        <a class="link-overlay" href="#"></a>
-                                        <a class="gallery-link" href="static/img/portfolio-1.jpg"><i class="ti-plus"></i></a>
-                                    </div>
-                                </div>
-                            </div>  -->
-
-                    <!-- grid item -->
-
-
-                    <!-- <div class="grid-item product branding">
-                                <div class="portfolio-box-01">
-                                    <div class="portfolio-img">
-                                        <img src="static/img/portfolio-1.jpg" title="" alt="">
-                                    </div>
-                                    <div class="portfolio-info">
-                                        <h5>Our Photography</h5>
-                                        <span>Design</span>
-                                        <a class="link-overlay" href="#"></a>
-                                        <a class="gallery-link" href="static/img/portfolio-1.jpg"><i class="ti-plus"></i></a>
-                                    </div>
-                                </div>
-                            </div>  -->
-
-                    <!-- grid item -->
 
 
                 </div> <!-- portfolio-content -->
