styled portfolio thumbnails

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             </div>
                             <div class="portfolio-info">
                                 <h5>Tetris</h5>
-                                <span>Full Tetris game using Node.JS and PostgresSQL with multiplayer functionality,
+                                <span>Full Tetris game using Node.js and PostgresSQL with multiplayer functionality,
                                     leaderboard and chatroom using sockets.io </span>
 
                                 <a class="link-overlay" href="https://powerful-ravine-73143.herokuapp.com/"></a>
@@ -303,7 +303,7 @@
                             </div>
                             <div class="portfolio-info">
                                 <h5>Trivia!</h5>
-                                <span>This application provides users with trivia questions with the users' choice of
+                                <span>This application provides trivia questions with the users' choice of
                                     category, difficulty, and number of questions. Provides single and multiplayer mode.
                                 </span>
                                 <a class="link-overlay" href="https://summerbr.github.io/TriviaApp/"></a>
@@ -324,9 +324,10 @@
                             </div>
                             <div class="portfolio-info">
                                 <h5>Tweet Tweet</h5>
-                                <span>Bare bones Twitter clone with Node.js, Express, Sequelize, and PostGres. </span>
+                                <span>Bare bones Twitter clone using Node.js, Express, Sequelize, and PostGres
+                                    that allows users to log in and post tweets and view other users' tweets. </span>
 
-                                <a class="link-overlay" href="https://powerful-ravine-73143.herokuapp.com/"></a>
+                                <a class="link-overlay" href="https://dctweet.herokuapp.com/"></a>
                                 <a class="gh-link" href="https://github.com/rdargali/Tweet-Tweet"><i
                                         class="fab fa-github"></i></a>
                             </div>
