updated resume and added Tweet to portfolio

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                             <h1>Rawand Dargali</h1>
                             <!-- <h2>I Am A <span id="type-it"></span></h2> -->
                             <div class="btn-bar go-to">
-                                <a class="m-btn m-btn-t-white" href="static/resume.pdf" target="_blank">My Resume</a>
+                                <a class="m-btn m-btn-t-white" href="static/Rawand Dargali Resume 2020.pdf"
+                                    target="_blank">My Resume</a>
                                 <a class="m-btn m-btn-white" href="https://github.com/rdargali">My Github</a>
                             </div>
                         </div>
@@ -179,7 +180,8 @@
                                 </li>
                             </ul>
                             <div class="btn-bar">
-                                <a class="m-btn m-btn-theme" href="static/resume.pdf" target="_blank">View my resume</a>
+                                <a class="m-btn m-btn-theme" href="static/Rawand Dargali Resume 2020.pdf"
+                                    target="_blank">View my resume</a>
                                 <a class="m-btn m-btn-theme" href="https://github.com/rdargali">View my Github</a>
                             </div>
 
