--- a/index.html
+++ b/index.html
@@ -317,6 +317,29 @@
 
                     <!-- grid item -->
 
+
+                    <div class="grid-item product branding">
+                        <div class="portfolio-box-01">
+                            <div class="portfolio-img">
+                                <img src="static/img/portfolio/Pokedex.png" title="" alt="">
+
+                            </div>
+                            <div class="portfolio-info">
+                                <h5>Pokémon Pokédex</h5>
+                                <span>An easy to use app made with React and Bootstrap for fans of Pokemon that
+                                    replicates the "Pokedex" from the TV
+                                    show. </span>
+
+                                <a class="link-overlay" href="https://rawand-pokedex.surge.sh/"></a>
+                                <a class="gh-link" href="https://github.com/rdargali/pokemon-pokedex"><i
+                                        class="fab fa-github"></i></a>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
                     <!-- grid item -->
                     <div class="grid-item product branding">
                         <div class="portfolio-box-01">
