changed email, updated resume

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <li class="media">
                                     <h6><span>Email</span></h6>
                                     <p id="emailHover" style="cursor: pointer;" onclick="copyText()"
-                                        title="Click to copy email to clipboard"><b> rdargali@yahoo.com</b> <img
+                                        title="Click to copy email to clipboard"><b> rdargali@gmail.com</b> <img
                                             id="copy" src="https://img.icons8.com/dotty/80/000000/copy-2.png"> </p>
                                 </li>
 
@@ -488,8 +488,8 @@
         <section id="contactus" class="section">
 
 
-            <p>Thank you for stopping by! Feel free to reach out to me at <b>rdargali@yahoo.com</b></p>
-            <input id="email" type="text" value="rdargali@yahoo.com" style="border: none; color: transparent;" readonly>
+            <p>Thank you for stopping by! Feel free to reach out to me at <b>rdargali@gmail.com</b></p>
+            <input id="email" type="text" value="rdargali@gmail.com" style="border: none; color: transparent;" readonly>
 
 
         </section>
