added stats don't lie to portfolio

--- a/index.html
+++ b/index.html
@@ -331,12 +331,36 @@
                                     show. </span>
 
                                 <a class="link-overlay" href="https://rawand-pokedex.surge.sh/"></a>
-                                <a class="gh-link" href="https://github.com/rdargali/pokemon-pokedex"><i
+                                <a class="gh-link" href="https://github.com/rdargali/pokedex"><i
                                         class="fab fa-github"></i></a>
                             </div>
 
                         </div>
                     </div>
+
+
+                    <!-- grid item -->
+
+
+                    <div class="grid-item product branding">
+                        <div class="portfolio-box-01">
+                            <div class="portfolio-img">
+                                <img src="static/img/portfolio/Stats.png" title="" alt="">
+
+                            </div>
+                            <div class="portfolio-info">
+                                <h5>Stats Don't Lie</h5>
+                                <span>A React app that allows users to compare NBA players' statistics side by side
+                                    using visual data such as charts and grids. </span>
+
+                                <a class="link-overlay" href="https://statsdontlie.netlify.app/"></a>
+                                <a class="gh-link" href="https://github.com/rdargali/stats-dont-lie"><i
+                                        class="fab fa-github"></i></a>
+                            </div>
+
+                        </div>
+                    </div>
+
 
 
 
