--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- title -->
     <title>Rawand Dargali</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="rd-favicon.png\">
+    <link rel="shortcut icon" type="image/x-icon" href="rd-favicon.jpg">
     <!-- plugin CSS -->
     <link href="static/plugin/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/plugin/font-awesome/css/all.min.css" rel="stylesheet">
